# trust-strategy-motorsports

./: CHANGELOG.md  CONTRIBUTING.md  README.md  f1_ai_strategist.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: race_config.yaml
docs/: API.md
src/: config.py  differential_games.py  fuel_model.py  game_theory.py  monte_carlo.py  pit_stop.py  race_replay.py  reinforcement_learning.py  safety_car.py  strategy_comparison.py  telemetry.py  tire_degradation.py  traffic.py  trust_analysis.py  weather.py
tests/: test_degradation.py  test_models.py  test_optimization.py  test_telemetry.py
