[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-strategy-engineer-toolkit"
version = "1.0.0"
authors = [
    { name = "Mannat Goyal", email = "mannatgoyal2810@gmail.com" }
]
description = "Modular decision-support system modeling thermodynamic tyre wear, non-linear fuel timing curves, Bayesian Safety Cars, and continuous energy control pacing for race strategy optimization."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "fastf1>=3.3.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.35.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0.1",
    "scipy>=1.12.0",
    "pytest>=8.0.0"
]
